--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
     "express": "^4.21.2",
     "mongoose": "^8.12.1",
     "ws": "^8.18.1"
-  }
+  },
+  "devDependencies": {
+    "eslint": "^9.22.0"
+  },
+  "type": "module"
 }
